--- a/app/Resources/views/user/form.html.twig
+++ b/app/Resources/views/user/form.html.twig
@@ -34,7 +34,7 @@
 
 <div class="form-group">
     {{ form_label(form.wantToLearn) }}
-    <div class="col-sm-4 checkableList">
+    <div class="col-sm-8 checkableList">
         {{ form_widget(form.wantToLearn) }}
         {{ form_errors(form.wantToLearn) }}
     </div>
@@ -58,7 +58,7 @@
 
 <div class="form-group">
     {{ form_label(form.type) }}
-    <div class="col-sm-4 checkableList">
+    <div class="col-sm-8 checkableList">
         {% for type in form.type %}
             {{ form_widget(type, {'label_attr': {'class': 'lead'}}) }}
             <p>{{ ('user.form.type.' ~ type.vars.value ~ '.help')|trans }}</p>
@@ -68,7 +68,7 @@
 </div>
 
 <div class="form-group">
-    <div class="col-lg-4">
+    <div class="col-lg-4 text-right">
         <label class="control-label required">{{ 'user.form.categories'|trans }}</label>
         <p>{{ 'user.form.categories.help'|trans }}</p>
     </div>
@@ -88,10 +88,10 @@
 </div>
 
 <div class="form-group">
-    {{ form_label(form.friendDescription) }}
+    {{ form_label(form.activities) }}
     <div class="col-sm-8">
-        {{ form_widget(form.friendDescription) }}
-        {{ form_errors(form.friendDescription) }}
+        {{ form_widget(form.activities) }}
+        {{ form_errors(form.activities) }}
     </div>
 </div>
 
@@ -103,7 +103,7 @@
     </div>
 </div>
 
-<div class="col-sm-offset-4">
+<div class="col-sm-offset-4" id="occupationDescription">
     <div class="form-group">
         {{ form_label(form.occupationDescription) }}
         <div class="col-sm-8">
@@ -157,8 +157,13 @@
     </div>
 </div>
 
-<div class="form-group start hidden">
-    {{ form_label(form.phoneNumber) }}
+<div class="form-group">
+    <div class="col-lg-4 text-right">
+        <label class="control-label required">{{ 'user.form.phone_number'|trans }}</label>
+        <p class="text-right music friend" id="mobileOptional">{{ 'user.form.optional'|trans }}</p>
+    </div>
+
+
     <div class="col-sm-8">
         {{ form_widget(form.phoneNumber) }}
         {{ form_errors(form.phoneNumber) }}
@@ -166,10 +171,12 @@
 </div>
 
 
+<h3 class="music hidden">Om ditt musikintresse</h3>
+
 <div class="form-group music hidden">
     <div class="col-lg-4">
         <label class="control-label required">{{ 'user.form.music_categories'|trans }}</label>
-        <p>{{ 'user.form.music_categories.help'|trans }}</p>
+        <p class="text-right">{{ 'user.form.music_categories.help'|trans }}</p>
     </div>
 
     <div class="col-sm-4 checkableList">
@@ -230,7 +237,15 @@
     </div>
 </div>
 
-{% if form.connectionRequests|length > 0 %}
+<div class="form-group start hidden">
+    {{ form_label(form.languages) }}
+    <div class="col-sm-8">
+        {{ form_widget(form.languages) }}
+        {{ form_errors(form.languages) }}
+    </div>
+</div>
+
+{% if form.connectionRequests is defined %}
     {% set connectionRequest = form.connectionRequests[0] %}
     <h3>Om mötet</h3>
     <div class="form-group hidden music friend">
@@ -246,15 +261,6 @@
         <div class="col-sm-4">
             {{ form_widget(connectionRequest.municipality) }}
             {{ form_errors(connectionRequest.municipality) }}
-        </div>
-    </div>
-
-    <div class="form-group start hidden">
-        {{ form_label(connectionRequest.comment) }}
-        <div class="col-sm-8">
-            {{ form_widget(connectionRequest.comment) }}
-            {{ form_errors(connectionRequest.comment) }}
-            <span class="help-block">{{ 'connection_request.form.comment.help'|trans }}</span>
         </div>
     </div>
 
@@ -304,7 +310,6 @@
         <div class="col-sm-8">
             {{ form_widget(connectionRequest.wantSameGender) }}
             {{ form_widget(connectionRequest.wantSameAge) }}
-            {{ form_widget(connectionRequest.wantTwoPersons) }}
         </div>
     </div>
 
