--- a/app/Resources/views/user/form.html.twig
+++ b/app/Resources/views/user/form.html.twig
@@ -265,18 +265,24 @@
     </div>
 
     <div class="form-group">
-        <label class="col-lg-4 control-label">{{ 'connection_request.form.available'|trans }}</label>
+        <label class="col-lg-4 control-label">{{ 'connection_request.form.available.day'|trans }}</label>
         <div class="col-sm-8">
             {{ form_widget(connectionRequest.availableWeekday) }}
             {{ form_widget(connectionRequest.availableWeekend) }}
+
+            {{ form_errors(connectionRequest.availableWeekday) }}
+            {{ form_errors(connectionRequest.availableWeekend) }}
         </div>
     </div>
 
     <div class="form-group">
-        <label class="col-lg-4 control-label">{{ 'connection_request.form.available'|trans }}</label>
+        <label class="col-lg-4 control-label">{{ 'connection_request.form.available.time'|trans }}</label>
         <div class="col-sm-8">
             {{ form_widget(connectionRequest.availableDay) }}
             {{ form_widget(connectionRequest.availableEvening) }}
+
+            {{ form_errors(connectionRequest.availableDay) }}
+            {{ form_errors(connectionRequest.availableEvening) }}
         </div>
     </div>
 
