Matching availability in find matches

--- a/app/Resources/views/admin2/match/find.html.twig
+++ b/app/Resources/views/admin2/match/find.html.twig
@@ -159,6 +159,7 @@
                 </div>
                 <h4><span data-content="user_info"></span> (<span data-content="matches" data-format="SpanDelimiter"></span>)</h4>
                 <p class="interests">Matching interests: <span data-content="interests"></span></p>
+                <p><strong>Matching availability:</strong> <span data-content="availability"></span></p>
                 <p data-content="about"></p>
                 <p>
                     <strong>Internal Comment</strong><br />
