Admin edit user

--- a/app/Resources/views/admin/default/inspection.html.twig
+++ b/app/Resources/views/admin/default/inspection.html.twig
@@ -13,7 +13,7 @@
                     <div class="col-md-10 col-md-offset-1">
                         <a href="{{ path('admin_ajax_connection_request_mark_inspected', {id: uninspectedRequest.id}) }}" class="btn btn-large btn-default btn-approve{% if uninspectedRequest.inspected %} disabled{% endif %}">{{ 'Approve'|trans }}</a>&nbsp;
                         <a href="{{ path('admin_ajax_connection_request_mark_pending_or_unpending', {id: uninspectedRequest.id}) }}" class="btn btn-large btn-default btn-unpending">{% if uninspectedRequest.pending %}{{ 'Remove Pending'|trans }}{% else %}{{ 'Make Pending'|trans }}{% endif %}</a>&nbsp;
-                        <a href="{{ path('admin_ajax_edit', {id: user.id}) }}" class="btn btn-large btn-default btn-edit-profile">{{ 'Edit Profile'|trans }}</a>
+                        <a href="{{ path('admin_user', {id: user.id}) }}" class="btn btn-large btn-default btn-edit-profile">{{ 'Edit Profile'|trans }}</a>
                     </div>
                 {% endblock %}
             {% endembed %}
