--- a/app/Resources/views/admin/user/view.html.twig
+++ b/app/Resources/views/admin/user/view.html.twig
@@ -1,26 +1,61 @@
 {% extends 'base.html.twig' %}
 {% form_theme form 'bootstrap_3_horizontal_layout.html.twig' %}
+{% form_theme connectionRequestForm 'bootstrap_3_horizontal_layout.html.twig' %}
 
 {% block body %}
     <div class="inner-page">
         <div class="container">
 
-            {{ form_start(form) }}
-            {{ form_widget(form) }}
+            <div class="row">
+                <div class="col-lg-6">
+                    {{ include(':user:form.html.twig') }}
 
-            <div class="form-group">
-                <div class="col-sm-offset-2 col-sm-10">
-                    <button
-                        type="submit"
-                        class="btn btn-default"
-                        {% if not user.enabled %}disabled="disabled"{% endif %}
-                    >Spara</button>
-                    {% if user.enabled %}
-                        <a href="#" id="delete">Ta bort</a>
-                    {% endif %}
+                    <div class="form-group">
+                        <div class="col-sm-offset-2 col-sm-10">
+                            <button
+                                    type="submit"
+                                    class="btn btn-default"
+                                    {% if not user.enabled %}disabled="disabled"{% endif %}
+                            >Spara</button>
+                            {% if user.enabled %}
+                                <a href="#" id="delete">Ta bort</a>
+                            {% endif %}
+                        </div>
+                    </div>
+                    {{ form_end(form) }}
+                </div>
+                <div class="col-lg-6">
+                    {{ form_start(connectionRequestForm) }}
+
+                    <div class="form-group">
+                        {{ form_label(connectionRequestForm.type) }}
+                        <div class="col-sm-4">
+                            {{ form_widget(connectionRequestForm.type) }}
+                            {{ form_errors(connectionRequestForm.type) }}
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        {{ form_label(connectionRequestForm.city) }}
+                        <div class="col-sm-4">
+                            {{ form_widget(connectionRequestForm.city) }}
+                            {{ form_errors(connectionRequestForm.city) }}
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        {{ form_label(connectionRequestForm.municipality) }}
+                        <div class="col-sm-4">
+                            {{ form_widget(connectionRequestForm.municipality) }}
+                            {{ form_errors(connectionRequestForm.municipality) }}
+                        </div>
+                    </div>
+
+                    {{ form_widget(connectionRequestForm) }}
+                    <button type="submit" class="btn btn-default">Save connection request</button>
+                    {{ form_end(connectionRequestForm) }}
                 </div>
             </div>
-            {{ form_end(form) }}
         </div>
     </div>
 {% endblock %}
@@ -42,6 +77,9 @@
                 }
             });
         });
+
+        {{ include(':user:form.js.twig') }}
+
     </script>
 
 {% endblock %}
