--- a/app/Resources/views/admin2/user/info.html.twig
+++ b/app/Resources/views/admin2/user/info.html.twig
@@ -33,7 +33,14 @@
         <div class="form-group">
             <label class="col-sm-2 control-label">{{ 'Area'|trans }}</label>
             <div class="col-sm-10">
-                <div class="form-control" id="area">{{ connectionRequest.city.name }}, {{ google_map_link(user.municipality.name) }}</div>
+                <div class="form-control" id="area">
+                    {% if connectionRequest.city %}
+                        {{ connectionRequest.city.name }}, {{ google_map_link(user.municipality.name) }}
+                    {% endif %}
+                    {% if connectionRequest.municipality %}
+                        {{ google_map_link(connectionRequest.municipality.name) }}
+                    {% endif %}
+                </div>
             </div>
         </div>
         <div class="form-group">
