--- a/app/Resources/views/preMatch/fragment.html.twig
+++ b/app/Resources/views/preMatch/fragment.html.twig
@@ -1,3 +1,4 @@
+<button type="button" class="btn btn-primary pull-right" data-toggle="modal" data-target="#userModal" data-user="{{ preMatch.fluentSpeakerConnectionRequest.user.id }}"><i class="fa fa-user fa-fw"></i>View user</button>
 <strong>
 {% if is_granted('ROLE_ADMIN') %}
     <a href="{{ path('admin_user', {'id': preMatch.fluentSpeakerConnectionRequest.user.id}) }}">{{ preMatch.fluentSpeakerConnectionRequest.user.name }}</a></strong>,
