--- a/app/Resources/views/municipality/matched.html.twig
+++ b/app/Resources/views/municipality/matched.html.twig
@@ -34,7 +34,7 @@
         </div>
     </div>
 
-    {% include(':municipality:modal.html.twig') %}
+    {% include('municipality/modal.html.twig') %}
 
 {% endblock %}
 
