--- a/app/Resources/views/municipality/waiting.html.twig
+++ b/app/Resources/views/municipality/waiting.html.twig
@@ -29,7 +29,7 @@
         </div>
     </div>
 
-    {% include(':municipality:modal.html.twig') %}
+    {% include('municipality/modal.html.twig') %}
 
 {% endblock %}
 
