--- a/app/Resources/views/preMatch/index.html.twig
+++ b/app/Resources/views/preMatch/index.html.twig
@@ -144,7 +144,7 @@
         </div>
     </div>
 
-    {% include('municipality:modal.html.twig') %}
+    {% include('municipality/modal.html.twig') %}
 
 {% endblock %}
 
