--- a/app/Resources/views/admin/user/view.html.twig
+++ b/app/Resources/views/admin/user/view.html.twig
@@ -1,6 +1,8 @@
 {% extends 'base.html.twig' %}
 {% form_theme form 'bootstrap_3_horizontal_layout.html.twig' %}
-{% form_theme connectionRequestForm 'bootstrap_3_horizontal_layout.html.twig' %}
+{% if connectionRequestForm %}
+    {% form_theme connectionRequestForm 'bootstrap_3_horizontal_layout.html.twig' %}
+{% endif %}
 
 {% block body %}
     <div class="inner-page">
@@ -25,36 +27,38 @@
                     {{ form_end(form) }}
                 </div>
                 <div class="col-lg-6">
-                    {{ form_start(connectionRequestForm) }}
+                    {% if connectionRequestForm %}
+                        {{ form_start(connectionRequestForm) }}
 
-                    <div class="form-group">
-                        {{ form_label(connectionRequestForm.type) }}
-                        <div class="col-sm-4">
-                            {{ form_widget(connectionRequestForm.type) }}
-                            {{ form_errors(connectionRequestForm.type) }}
+                        <div class="form-group">
+                            {{ form_label(connectionRequestForm.type) }}
+                            <div class="col-sm-4">
+                                {{ form_widget(connectionRequestForm.type) }}
+                                {{ form_errors(connectionRequestForm.type) }}
+                            </div>
                         </div>
-                    </div>
 
-                    <div class="form-group">
-                        {{ form_label(connectionRequestForm.city) }}
-                        <div class="col-sm-4">
-                            {{ form_widget(connectionRequestForm.city) }}
-                            {{ form_errors(connectionRequestForm.city) }}
+                        <div class="form-group">
+                            {{ form_label(connectionRequestForm.city) }}
+                            <div class="col-sm-4">
+                                {{ form_widget(connectionRequestForm.city) }}
+                                {{ form_errors(connectionRequestForm.city) }}
+                            </div>
                         </div>
-                    </div>
 
-                    <div class="form-group">
-                        {{ form_label(connectionRequestForm.municipality) }}
-                        <div class="col-sm-4">
-                            {{ form_widget(connectionRequestForm.municipality) }}
-                            {{ form_errors(connectionRequestForm.municipality) }}
+                        <div class="form-group">
+                            {{ form_label(connectionRequestForm.municipality) }}
+                            <div class="col-sm-4">
+                                {{ form_widget(connectionRequestForm.municipality) }}
+                                {{ form_errors(connectionRequestForm.municipality) }}
+                            </div>
                         </div>
-                    </div>
 
-                    {{ form_widget(connectionRequestForm) }}
-                    <button type="submit" class="btn btn-default">Save connection request</button>
-                    <button class="btn btn-danger" id="delete-connection-request" data-connection-request-id="{{ connectionRequestForm.vars.value.id }}">Ta bort</button>
-                    {{ form_end(connectionRequestForm) }}
+                        {{ form_widget(connectionRequestForm) }}
+                        <button type="submit" class="btn btn-default">Save connection request</button>
+                        <button class="btn btn-danger" id="delete-connection-request" data-connection-request-id="{{ connectionRequestForm.vars.value.id }}">Ta bort</button>
+                        {{ form_end(connectionRequestForm) }}
+                    {% endif %}
                 </div>
             </div>
         </div>
