Other user contact details

--- a/app/Resources/views/preMatch/email.txt.twig
+++ b/app/Resources/views/preMatch/email.txt.twig
@@ -5,7 +5,7 @@ Nu har vi hittat en Startkompis till dig att upptäcka {{ connectionRequest.muni
 
 Vi föreslår att ni träffas {{ connectionRequest.municipality.meetingPlace }}, {{ preMatch|meeting_time }}. Det är mycket viktigt att du kommer i tid.
 
-{{ user.firstName }}s kontaktuppgifter är: {{ user.phoneNumber }} och {{ user.email }}.
+{{ otherUser.firstName }}s kontaktuppgifter är: {{ otherUser.phoneNumber }} och {{ otherUser.email }}.
 
 Gör såhär:
 Bekräfta ert möte. Du som är etablerad i kommunen har nu huvudansvaret att inom 7 dagar bekräfta att ni ska ses den föreslagna tiden. Om tiden vi har föreslagit inte passar er måste du hitta en ny tid som passar er båda. Inför ert möte, tänker du ut en promenad i närområdet på cirka 1 timme.
