Correct user data

--- a/app/Resources/views/preMatch/email.txt.twig
+++ b/app/Resources/views/preMatch/email.txt.twig
@@ -1,6 +1,6 @@
 Hej {{ user.firstName }}!
 
-Nu har vi hittat en Startkompis till dig att upptäcka {{ connectionRequest.municipality.name }} med! {{ user.gender|pronoun|capitalize }} heter {{ user.name }}, är {{ user.age }} år och kommer från {{ user.from|country_name }}. {% if connectionRequest.extraPerson %}{{ user.firstName }} kommer ta med sig (en kompis/sin partner/ sitt barn) till mötet.{% endif %}
+Nu har vi hittat en Startkompis till dig att upptäcka {{ connectionRequest.municipality.name }} med! {{ otherUser.gender|pronoun|capitalize }} heter {{ otherUser.name }}, är {{ otherUser.age }} år och kommer från {{ otherUser.from|country_name }}. {% if otherUserConnectionRequest.extraPerson %}{{ otherUser.firstName }} kommer ta med sig (en kompis/sin partner/ sitt barn) till mötet.{% endif %}
 
 
 Vi föreslår att ni träffas {{ connectionRequest.municipality.meetingPlace }}, {{ preMatch|meeting_time }}. Det är mycket viktigt att du kommer i tid.
@@ -23,7 +23,7 @@ PS. Kom ihåg att respektera varandra, att inte svara påverkar den andra person
 -----English-----
 Dear {{ user.firstName }},
 
-We have found a Startkompis (Start friend) for you to discover {{ connectionRequest.municipality.name }} with! The person’s name is {{ user.name }}, is {{ user.age }} years old and comes from {{ user.from|country_name }}. {% if connectionRequest.extraPerson %}{{ user.firstName }} will bring a friend/partner or child to the meeting.{% endif %}
+We have found a Startkompis (Start friend) for you to discover {{ connectionRequest.municipality.name }} with! The person’s name is {{ otherUser.name }}, is {{ otherUser.age }} years old and comes from {{ otherUser.from|country_name }}. {% if otherUserConnectionRequest.extraPerson %}{{ otherUser.firstName }} will bring a friend/partner or child to the meeting.{% endif %}
 
 We suggest that you meet {{ connectionRequest.municipality.meetingPlace }}, {{ preMatch|meeting_time }}. It’s very important that you are in time.
 
